--- a/area/src/app/profil/profile.page.scss
+++ b/area/src/app/profil/profile.page.scss
@@ -5,6 +5,7 @@
     margin-right: 5%;
     height: 100%;
     overflow-y: auto;
+    background-color: --ion-background-color;
 }
 
 .leftSide {
@@ -71,12 +72,5 @@ app-profil-card {
         flex-wrap: wrap;
         justify-content: space-around;
         height: auto;
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .rightSide,
-    .leftSide {
-        background: #1a1a1a;
     }
 }
